# rust-raytracer

./: Cargo.toml  IDEAS.MD  README.MD
.VSCodeCounter/2022-02-10_13-13-31/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: ci.yml
src/: camera.rs  color.rs  fps_counter.rs  main.rs  materials.rs  objects.rs  ray.rs  sphere.rs  util.rs
