[package]
name = "raytrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

time = "0.1"
timer = "0.2.0"
piston_window = "0.121.0"
image = "0.23.0"
nalgebra-glm = "0.16.0"
rand = "0.8.4"
find_folder = "0.3.0"
threadpool = "1.0"

[env]
WINIT_HIDPI_FACTOR=1.0